fixed display on mobile

--- a/CSCE242/projects/part5/styles.css
+++ b/CSCE242/projects/part5/styles.css
@@ -165,7 +165,7 @@ a{
 .hide-small{
     display:none;
 }
-@media (min-width: 768px){
+@media all and (orientation: landscape){
     #content{
         width: 75%;
         margin: auto;
